Fixed table sizing in firefox
Using "width: 0" makes some cells too small in firefox. "width: auto" fixes that.

--- a/resource/cog.css
+++ b/resource/cog.css
@@ -44,7 +44,7 @@ tr:nth-child(odd) {
 }
 
 table.small {
-    width: 0%;
+    width: auto;
 }
 
 /* Links */
